@@ -456,10 +456,9 @@ int init_multiple_segtypes(struct cmd_context *cmd, struct segtype_library *segl
 
 	do {
 		if ((segtype = raid_segtype_fn[i](cmd)) &&
-		    !lvm_register_segtype(seglib, segtype)) {
-			dm_free(segtype);
+		    !lvm_register_segtype(seglib, segtype))
+			/* segtype is already destroyed */
 			return_0;
-		}
 	} while (raid_segtype_fn[++i]);
 
 	return 1;
